--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   ],
   "dependencies": {
     "polymer": "^1.9.1",
-    "iron-flex-layout": "^1.3.7"
+    "iron-flex-layout": "^1.3.7",
+    "socket.io-client": "https://github.com/socketio/socket.io-client.git#1.7.2"
   }
 }
